app/src/App.css
/*
============ LoginSplash ================
*/
.splashButton {
  padding-top: 5px;
}

/*
============ Dashboard ================
*/
.allBody {
  height: 100%;
  width: 100%;
}

/*
============ Bartender ================
*/
.outliner {
  border-style: solid;
  border-color: black;
}

.revealer {
  width: 100%;
  margin-top: 5px;
}

.myLabel {
  margin-right: 10px;
}

#order-cnt {
  margin: 0 10px 0 0;
  float: left;
}

#bar_queue_container {
  margin: 35px 0px 35px 7%;
}

#teal {
  background-color: #00B5AD
}

#blue {
  background-color: #2185D0
}

#complete {
  background-color: #BABBBC
}

/*
============ Done Orders ================
*/

#done-orders {
  margin: 75px 0px 0px 2%;
}

/*
============ Bartenders Nav ================
*/

.ui.inverted.menu .selectedNav {
  background: rgba(255, 255, 255, 0.08);
  border: 1px solid white;
}

.ui.inverted.menu .unselectedNav {
  background: transparent;
}

